logic of users and roles finished
